# edgevec

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package.json
.claude/: GATE_W33_COMPLETE.md  settings.json  settings.local.json
.github/workflows/: arm-ci.yml  benchmark.yml  ci.yml  pages.yml  regression.yml
benches/: baselines.json  batch_delete_bench.rs  batch_vs_sequential.rs  bench_quantization.rs  bq_popcount.rs  bq_recall.rs  bq_search.rs  check_regression.py  delete_bench.rs  distance_bench.rs  filter_strategy_bench.rs  flat_bench.rs  hnsw_init_bench.rs  hybrid_bench.rs  insert_bench.rs  memory_bench.rs  neighbor_bench.rs  p99_bench.rs  persistence_bench.rs  pq_bench.rs  quant_bench.rs  recall_bench.rs  scaling_bench.rs  search_bench.rs  simd_bench.rs  simd_comparison.rs  simd_neon_bench.rs  sparse_bench.rs  sparse_storage_bench.rs  storage_bench.rs  tombstone_bench.rs  validation.rs
benches/competitive/: harness.js  package.json
demo/entity-rag/: index.html  prepare_data.py
docs/: COMPARISON.md  INTEGRATION_GUIDE.md  MIGRATION.md  PERFORMANCE_TUNING.md  ROLLBACK_PLAYBOOK.md  TROUBLESHOOTING.md  TUTORIAL.md  index.html
docs/announcements/: v0.4.0_release.md
docs/api/: BINARY_FLAT_INDEX.md  DATABASE_OPERATIONS.md  ERROR_REFERENCE.md  FILTER_SYNTAX.md  FLAT_INDEX.md  FUNCTIONAL_FILTERS.md  HYBRID_SEARCH.md  MEMORY.md  README.md  SPARSE_VECTORS.md  TYPESCRIPT_API.md  WASM_INDEX.md
docs/architecture/: ARCHITECTURE.md  FILTER_STRATEGY.md  WASM_BATCH_API.md
docs/archive/: RELEASE_CHECKLIST_v0.4.md
docs/audits/: API_STABILITY_AUDIT.md  API_SURFACE_INVENTORY.md  CODE_CONSOLIDATION_AUDIT.md  DEPENDENCY_AUDIT.md  FUZZ_CAMPAIGN_PLAN.md  MIRI_REGRESSION_W49.md  UNSAFE_INVENTORY.md  unsafe_audit_persistence.md  unsafe_audit_simd.md
docs/benchmarks/: 2025-12-24_simd_benchmark.md  PQ_GO_NOGO_DECISION.md  competitive_analysis.md  competitive_analysis_v2.md  hardware_specs.md  methodology.md  w24_filter_advantage.md  w24_hnswlib_comparison.md  w24_prior_art_search.md  w24_tier2_feature_matrix.md  w24_voy_comparison.md  week38_sparse_storage.md  week_11_batch_vs_sequential.md  week_12_wasm_batch.md  week_23_baseline.md
docs/blog/: entity-enhanced-rag.md
docs/demo/: benchmark-data.json  benchmark_dashboard.html  cyberpunk.html  filter-playground.html  hub.html  index.html  simd_benchmark.html  simd_hamming_test.html  soft_delete.html  v060_cyberpunk_demo.html  v070_demo.html
docs/design/: ACCESSIBILITY_AUDIT.md
docs/development/: SIMD_SAFETY.md
docs/fixes/: 2025-12-19_WASM_BUILD_FIX.md
docs/guides/: BINARY_QUANTIZATION.md  COMPARISON_PGVECTOR.md  EMBEDDING_GUIDE.md  MOBILE_USAGE.md  REACT_INTEGRATION.md  VUE_INTEGRATION.md
docs/images/: SCREENSHOT_GUIDE.md
docs/incidents/: 2025-12-12_alpha1_missing_snippets.md
docs/investigations/: 2025-12-19_IOS_FILTER_INCONSISTENCY_ROOT_CAUSE.md  2025-12-22_WASM_OPT_IOS_SAFARI.md
docs/marketing/: JANUARY_ANNOUNCEMENT_PREP.md
docs/mobile/: ANDROID_CHROME_COMPATIBILITY.md  ANDROID_TESTING_SETUP.md  ANDROID_TEST_RESULTS.md  COMPATIBILITY_MATRIX.md  IOS_KNOWN_ISSUES.md  IOS_SAFARI_COMPATIBILITY.md  IOS_TESTING_SETUP.md  IOS_TEST_RESULTS.md  TOUCH_OPTIMIZATION.md
docs/pkg-web/: edgevec.d.ts  edgevec.js  edgevec_bg.wasm
docs/planning/: ROADMAP.md  SPARSE_MODULE_STRUCTURE.md  V0.8.0_CONSOLIDATION_PLAN.md  W25_DAY3_REMEDIATION_PLAN.md
docs/pq-bench/: index.html
docs/research/: LANGCHAIN_SPIKE.md  PQ_BENCHMARK_PLAN.md  PRODUCT_QUANTIZATION_LITERATURE.md  RELAXED_SIMD_SPIKE.md  SCALE_UP_ANALYSIS_2025-12-20.md  WEBGPU_SPIKE.md
docs/reviews/: 2025-12-12_W9D43_APPROVED.md  2025-12-13_W10.1_APPROVED.md  2025-12-13_W10.2a_APPROVED.md  2025-12-13_W10.2b_APPROVED.md  2025-12-13_W10.2c_APPROVED.md  (+149 more)
examples/: README.md  batch_insert.rs  filter_basic.rs  filter_documents.rs  filter_ecommerce.rs  filter_persistence.rs  filter_realtime.rs  pq_timing.rs  recall_validation.rs
fuzz/: CORPUS_METHODOLOGY.md  Cargo.toml  generate_corpus.py
fuzz/fuzz_targets/dummy_harness/: target.rs
fuzz/fuzz_targets/filter_deep/: target.rs
fuzz/fuzz_targets/filter_simple/: target.rs
fuzz/fuzz_targets/flat_index/: target.rs
fuzz/fuzz_targets/graph_ops/: target.rs
fuzz/fuzz_targets/header_parse/: target.rs
fuzz/fuzz_targets/hnsw_config/: target.rs
fuzz/fuzz_targets/hnsw_insert/: target.rs
fuzz/fuzz_targets/hnsw_search/: target.rs
fuzz/fuzz_targets/persistence/: target.rs
fuzz/fuzz_targets/quantization/: target.rs
fuzz/fuzz_targets/search_robustness/: target.rs
fuzz/fuzz_targets/sparse_storage/: target.rs
fuzz/fuzz_targets/sparse_vector/: target.rs
fuzz/fuzz_targets/wal_replay/: target.rs
pkg/: .gitignore  LICENSE-APACHE  README.md  edgevec-types.d.ts  edgevec-wrapper.d.ts  edgevec-wrapper.js  edgevec-wrapper.ts  edgevec.d.ts  edgevec.js  edgevec_bg.wasm  edgevec_bg.wasm.d.ts  filter-builder.d.ts  filter-builder.js  filter-builder.ts  filter.d.ts  filter.js  filter.ts  index.d.ts  index.js  index.ts  package-lock.json  package.json  sparse-helpers.d.ts  sparse-helpers.js  tsconfig.json
pkg/react/: index.ts  (+3 more)
scripts/: capture-screenshots.js  package.json
src/: batch.rs  error.rs  lib.rs  storage.rs
tests/: alignment_safety.rs  batch_delete.rs  batch_errors.rs  batch_insert.rs  batch_progress.rs  binary_flat_index_integration.rs  bq_persistence.rs  bq_recall_roundtrip.rs  bq_rescore.rs  chaos_hnsw.rs  chaos_monkey.rs  codex_review_fixes.rs  compaction.rs  filter_evaluator_tests.rs  filter_parser_tests.rs  filter_strategy_tests.rs  flat_index_integration.rs  fuzz_mock.rs  fuzz_simulation.rs  hnsw_properties.rs  hybrid_recall_test.rs  hybrid_search.rs  hybrid_search_test.rs  integration_batch.rs  integration_binary.rs  integration_filtered_search.rs  integration_quantized_recall.rs  integration_recall.rs  integration_storage_durability.rs  load_test.rs  metadata_roundtrip.rs  metadata_serialize.rs  migration_v03_v04.rs  persistence_corruption.rs  persistence_v3.rs  proptest_distance.rs  proptest_fuzz.rs  proptest_header.rs  proptest_hnsw_delete.rs  proptest_hnsw_search.rs  (+21 more)
wasm/: batch_types.ts  types.ts
(+335 files in other folders)
