[package]
name = "edgevec-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }
postcard = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.edgevec]
path = ".."

# ============================================================================
# FUZZ TARGETS — Reorganized into corpus-based hierarchy (W10.1)
# Each target is in its own subdirectory: fuzz_targets/<name>/target.rs
# ============================================================================

[[bin]]
name = "dummy_harness"
path = "fuzz_targets/dummy_harness/target.rs"
test = false
doc = false

[[bin]]
name = "quantization"
path = "fuzz_targets/quantization/target.rs"
test = false
doc = false

[[bin]]
name = "graph_ops"
path = "fuzz_targets/graph_ops/target.rs"
test = false
doc = false

[[bin]]
name = "header_parse"
path = "fuzz_targets/header_parse/target.rs"
test = false
doc = false

[[bin]]
name = "hnsw_config"
path = "fuzz_targets/hnsw_config/target.rs"
test = false
doc = false

[[bin]]
name = "hnsw_insert"
path = "fuzz_targets/hnsw_insert/target.rs"
test = false
doc = false

[[bin]]
name = "hnsw_search"
path = "fuzz_targets/hnsw_search/target.rs"
test = false
doc = false

[[bin]]
name = "persistence"
path = "fuzz_targets/persistence/target.rs"
test = false
doc = false

[[bin]]
name = "search_robustness"
path = "fuzz_targets/search_robustness/target.rs"
test = false
doc = false

[[bin]]
name = "wal_replay"
path = "fuzz_targets/wal_replay/target.rs"
test = false
doc = false
